Fix: Eliminar overflow horizontal en body

--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,7 @@ body {
     position: relative;
     min-height: 100%;
     margin: 0;
+    overflow-x: hidden;
 }
 
 p {
